# Overlord

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  build-backstage-capture-dll.bat  build-backstage-capture-dll.sh  build-backstage-dll.bat  build-backstage-dll.sh  build-desktop.bat  build-desktop.sh  build-hvnc-capture-dll.bat  build-hvnc-capture-dll.sh  docker-compose.quickstart.yml  docker-compose.windows.yml  docker-compose.yml  go.work.sum  mediamtx.yml  start-dev-client.sh  start-dev-server.sh  start-dev.command
.github/: renovate.json
.github/workflows/: desktop-release.yml  (+2 more)
BackstageInjection/: BackstageInjection.vcxproj  HVNCInjection.vcxproj.filters
FAQ/: Contribution_policy.md  README.md
HVNCCapture/: HVNCCapture.vcxproj
HVNCInjection/: HVNCInjection.vcxproj
Overlord-Client/: go.mod  go.sum
Overlord-Desktop/: README.md  package.json
Overlord-Desktop/src-tauri/: Cargo.toml  tauri.conf.json
Overlord-Desktop/src-tauri/capabilities/: default.json
Overlord-Desktop/src-tauri/src/: lib.rs  main.rs
Overlord-Server/: .env.example  bunfig.toml  config.json.example  package.json  playwright.config.ts
docker/: updater.Dockerfile
overlord-hosting-site/: index.html  package-lock.json  package.json
plugin-crypto-wallet/: crypto-wallet.css  crypto-wallet.html  crypto-wallet.js
plugins/: PLUGINS.md
scripts/: build-clients.bat  overlord-updater.service  overlord-updater.sh  rd-network-impairment.sh  start-dev-server.sh  start-dev.bat  update-overlord.sh  vendor-nvcodec-headers.bat  vendor-nvcodec-headers.sh
(+414 files in other folders)
